# pydatamanager

./: README.md  README.rst  pyproject.toml
src/pydata/resources/: VERSION
src/pydatamanager/: data.py
src/pydatamanager/post_treatment/: process_to_scalar.py
src/pydatamanager/resources/: VERSION  config_template.toml
src/pydatamanager/utils/: config.py  enums.py  factory.py  logger.py  math_utils.py  slicing.py  utils.py
tests/utils/: data_test.py
